# lineage-list-tool

./: .gitignore  CMakeLists.txt  README.md  build.bat  build_dist.bat
src/: app.rc  main.cpp
